Remove website from CV

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -57,7 +57,7 @@
 
 \mobile{+44 7444 720845}
 \email{jzz18@ic.ac.uk}
-\homepage{jasonzheng.co.uk}
+% \homepage{jasonzheng.co.uk}
 \github{github.com/jzzheng22}
 \linkedin{linkedin.com/in/jasonzheng22/}
 % \gitlab{gitlab-id}
