Change email from Imperial to Gmail

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -56,7 +56,7 @@
 \name{}{Jason Zheng}
 
 \mobile{+44 7444 720845}
-\email{jzz18@ic.ac.uk}
+\email{jzzheng22@gmail.com}
 % \homepage{jasonzheng.co.uk}
 \github{github.com/jzzheng22}
 \linkedin{linkedin.com/in/jasonzheng22/}
