--- a/cv/cv/projects.tex
+++ b/cv/cv/projects.tex
@@ -20,6 +20,17 @@
   %   }
 
   \cvproject
+  {The Platform-Playing Platform} % Project name
+  {Self-Organising Multi-Agent Systems} % Event name
+  { % Description
+      \begin{cvitems}
+          \item Led a team of 47 people to build a platform to simulate a self-organising multi-agent system using \textbf{Go}.
+          \item Assisted with program architecture design and implementation.
+          \item Responsible for managing the project, reviewing code, and chairing meetings.
+      \end{cvitems}
+  }
+
+  \cvproject
   {Draw2D Library for ISSIE} % Project name
   {High Level Programming} % Event name
   { % Description
@@ -61,16 +72,16 @@
 %       \end{cvitems}
 %   }
 
-  \cvproject
-  {A Pigment of Your Imagination} % Organization
-  {Oxford Hack 2019} % Location
-  {
-    \begin{cvitems} % Description(s) of tasks/responsibilities
-      \item Created an Android app in \textbf{Kotlin} and \textbf{Java} that turns photos into blank colouring stencils
-      \item Implemented edge detection algorithm and scanline fill algorithms to find shape outlines and fill colours within these lines
-      \item Finalist for Most Stylish Hack
-    \end{cvitems}
-  }
+  % \cvproject
+  % {A Pigment of Your Imagination} % Organization
+  % {Oxford Hack 2019} % Location
+  % {
+  %   \begin{cvitems} % Description(s) of tasks/responsibilities
+  %     \item Created an Android app in \textbf{Kotlin} and \textbf{Java} that turns photos into blank colouring stencils
+  %     \item Implemented edge detection algorithm and scanline fill algorithms to find shape outlines and fill colours within these lines
+  %     \item Finalist for Most Stylish Hack
+  %   \end{cvitems}
+  % }
 
 %---------------------------------------------------------
 %   \cvproject
