--- a/cv/cv/skills.tex
+++ b/cv/cv/skills.tex
@@ -17,7 +17,7 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {\textbf{C/C++, F\#}, Python, JavaScript, Java, Verilog, MATLAB} % Skills
+    {\textbf{F\#, Go, C/C++}, Python, JavaScript, Java, Verilog, MATLAB} % Skills
 
 %---------------------------------------------------------
   \cvskill
