--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -1,4 +1,5 @@
-%!TEX TS-program = xelatex
+% !TEX program = xelatex
+
 %!TEX encoding = UTF-8 Unicode
 % Awesome CV LaTeX Template for CV/Resume
 %
