--- a/cv/cv/education.tex
+++ b/cv/cv/education.tex
@@ -17,7 +17,7 @@
     {Sept 2018 -- July 2022}
     {
       \begin{cvitems}
-        \item {Predicted for First-Class Honours; 3rd Year: 77.46\% (Dean's List), 2nd Year: 71.22\%, 1st Year: 68.27\%}
+        \item {Predicted for First-Class Honours; 3rd Year: 77.46\% (Dean's List), 2nd Year: 71.22\%, 1st Year: 68.27\%.}
       \end{cvitems}
     }
 
@@ -28,8 +28,8 @@
     {Jan 2013 -- Dec 2017}
     {
       \begin{cvitems}
-        \item NZ Scholarships: Calculus and Statistics (awarded to top 3\% of country)
-        \item A Levels: A*s in Biology, Chemistry, Physics, Mathematics; A in Further Mathematics
+        \item NZ Scholarships: Calculus and Statistics (awarded to top 3\% of country).
+        \item A Levels: A*s in Biology, Chemistry, Physics, Mathematics; A in Further Mathematics.
         % \item AS Levels: a in Economics; b in English Literature
         % \item IGCSEs: 7A*s
       \end{cvitems}
