--- a/cv/cv/experience.tex
+++ b/cv/cv/experience.tex
@@ -30,13 +30,13 @@
 {Dec 2020 -- present} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item Extended Compiler Explorer (written in \textbf{JavaScript}) to compile OpenCL~C and C++~for~OpenCL to Arm assembly and SPIR-V assembly, resulting in improved productivity for the GPU Compiler team
-    \item Fixed bugs in open-source software, including \textbf{Clang} and the \textbf{SPIR-V/LLVM Translator}, to correctly produce debugging info when compiling OpenCL languages
+    \item Extended Compiler Explorer (written in \textbf{JavaScript}) to compile OpenCL~C and C++~for~OpenCL to Arm assembly and SPIR-V assembly, resulting in improved productivity for the GPU Compiler team.
+    \item Fixed bugs in open-source software, including \textbf{Clang} and the \textbf{SPIR-V/LLVM Translator}, to correctly produce debugging info when compiling OpenCL languages.
     % \item Clang bug: fixed bug in Clang where DWARF address space information was missing
     % \item Translator bug: introduced mappings to correctly convert between different language codes when translating between LLVM IR and SPIR-V
-    \item Used \textbf{Docker} to add infrastructure support for SPIR-V/LLVM Translator in Compiler Explorer
-    \item Investigated an \textbf{OpenCL~C} extension to allow dynamic memory allocation from kernel functions running on OpenCL devices
-    \item Implemented a basic version of \lstinline$malloc$ and \lstinline$free$ to run on single-threaded OpenCL devices
+    \item Used \textbf{Docker} to add infrastructure support for SPIR-V/LLVM Translator in Compiler Explorer.
+    \item Investigated an \textbf{OpenCL~C} extension to allow dynamic memory allocation from kernel functions running on OpenCL devices.
+    \item Implemented a basic version of \lstinline$malloc$ and \lstinline$free$ to run on single-threaded OpenCL devices.
     % \item Lockless algorithm: avoid contention from thousands of threads competing for smae lock
     % \item Pre-allocate fixed size buffer on each device to act as heap
     % \item Can avoid contention by using multiple pools of memory blocks within buffer
@@ -50,12 +50,12 @@
 {June 2020 -- Sept 2020} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item Integrated the ARM GPU software model with \textbf{QEMU} to enable testing via the kernel driver, with the goal of deprecating their usermode driver
-    \item Investigated its feasibility by writing a \textbf{Bash} script to automate testing and comparing execution times and the number of passing test cases
-    \item Extended a \textbf{kernel driver} written in \textbf{C} to allow it to interoperate with QEMU
-    \item Used a memory-backend-file to share memory between the Host and Guest, taking into account their different memory mappings
-    \item Added new interrupt requests to facilitate reading and writing to GPU registers via shared memory
-    \item Implemented virtio-serial consoles to raise interrupt requests using FIFO queues 
+    \item Integrated the ARM GPU software model with \textbf{QEMU} to enable testing via the kernel driver, with the goal of deprecating their usermode driver.
+    \item Investigated its feasibility by writing a \textbf{Bash} script to automate testing and comparing execution times and the number of passing test cases.
+    \item Extended a \textbf{kernel driver} written in \textbf{C} to allow it to interoperate with QEMU.
+    \item Used a memory-backend-file to share memory between the Host and Guest, taking into account their different memory mappings.
+    \item Added new interrupt requests to facilitate reading and writing to GPU registers via shared memory.
+    \item Implemented virtio-serial consoles to raise interrupt requests using FIFO queues.
   \end{cvitems}
 }
 
@@ -68,7 +68,7 @@
 {Sept 2020 -- present} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item Responsible for teaching students C++ programming concepts in a clear and concise manner
+    \item Responsible for teaching students C++ programming concepts in a clear and concise manner.
   \end{cvitems}
 }
 
@@ -80,7 +80,7 @@
 {Nov 2018 -- present} % Date(s)
 {
   \begin{cvitems} % Description(s) of tasks/responsibilities
-    \item Duties involve giving tours of campus to visitors and prospective students, answering questions and providing insights about the College, assisting with virtual and in-person events, mentoring students to promote STEM, tutoring students in A-Level Maths
+    \item Duties involve giving tours of campus to visitors and prospective students, answering questions and providing insights about the College, assisting with virtual and in-person events, mentoring students to promote STEM, tutoring students in A-Level Maths.
   \end{cvitems}
 }
 
