--- a/cv/cv/projects.tex
+++ b/cv/cv/projects.tex
@@ -35,8 +35,8 @@
   {High Level Programming} % Event name
   { % Description
       \begin{cvitems}
-          \item {Developed a circuit-drawing library in the functional programming language \textbf{F\#} for use in ISSIE, a teaching tool for digital circuit design}% and simulation}
-          \item Acted as project manager, reviewing pull requests, running meetings, and managing deadlines and deliverables
+          \item {Developed a circuit-drawing library in the functional programming language \textbf{F\#} for use in ISSIE, a teaching tool for digital circuit design.}% and simulation}
+          \item Acted as project manager, reviewing pull requests, running meetings, and managing deadlines and deliverables.
       \end{cvitems}
   }
 
@@ -45,8 +45,8 @@
   {Embedded Systems} % Event name
   { % Description
       \begin{cvitems}
-          \item {Implemented firmware for a multi-threaded keyboard synthesiser, with support for volume control, octave control, and multiple timbres}
-          \item Acted as project manager to ensure code quality and timely completion of deliverables
+          \item {Implemented firmware for a multi-threaded keyboard synthesiser, with support for volume control, octave control, and multiple timbres.}
+          \item Acted as project manager to ensure code quality and timely completion of deliverables.
       \end{cvitems}
   }
 
@@ -55,11 +55,11 @@
   {Computer Architecture \& Language Processors}
   {
       \begin{cvitems}
-          \item Built a compiler in \textbf{C++} to generate \textbf{MIPS assembly} from subset of pre-processed C90
-          \item Developed a transpiler to translate a subset of C into equivalent \textbf{Python}
-          \item Implemented lexing and parsing functionality using \textbf{Flex} and \textbf{Yacc}
-          \item Developed CPU simulator in \textbf{C++} to execute MIPS-1 big-endian binaries, and created a testbench to verify correctness of the simulator
-        \item Referenced the MIPS ISA specification to ensure parity between emulated instructions and the real hardware
+          \item Built a compiler in \textbf{C++} to generate \textbf{MIPS assembly} from subset of pre-processed C90.
+          \item Developed a transpiler to translate a subset of C into equivalent \textbf{Python}.
+          \item Implemented lexing and parsing functionality using \textbf{Flex} and \textbf{Yacc}.
+          \item Developed CPU simulator in \textbf{C++} to execute MIPS-1 big-endian binaries, and created a testbench to verify correctness of the simulator.
+        \item Referenced the MIPS ISA specification to ensure parity between emulated instructions and the real hardware.
     \end{cvitems}
 }
 
