Update CV for SOMAS

--- a/cv/cv/projects.tex
+++ b/cv/cv/projects.tex
@@ -24,9 +24,9 @@
   {Self-Organising Multi-Agent Systems} % Event name
   { % Description
       \begin{cvitems}
-          \item Led a team of 47 people to build a platform to simulate a self-organising multi-agent system using \textbf{Go}.
-          \item Assisted with program architecture design and implementation.
-          \item Responsible for managing the project, reviewing code, and chairing meetings.
+          \item Chaired a group project of 47 people split into 7 teams to build a platform for simulating a self-organising multi-agent system using \textbf{Go}.
+          \item Assisted with program architecture design and implementation of treaty creation, message passing, and health tracking.
+          \item Designed an agent capable of self-organising with other agents of different strategies to maximise collective utility.
       \end{cvitems}
   }
 
