--- a/cv/cv/skills.tex
+++ b/cv/cv/skills.tex
@@ -17,12 +17,12 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {\textbf{F\#, Go, C/C++}, Python, JavaScript, Java, Verilog, MATLAB} % Skills
+    {\textbf{F\#, Go, C/C++}, Python, JavaScript, Verilog, MATLAB} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Tools} % Category
-    {Git, Linux, Docker, SQL, Flex, Yacc, CAD (Autodesk Inventor, Fusion 360)} % Skills
+    {Git, Linux, Docker, SQL, CAD (Autodesk Inventor, Fusion 360)} % Skills
 
 %---------------------------------------------------------
   \cvskill
